--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - ./mvnw clean package -DskipTests
+     # - ./mvnw clean package -DskipTests
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:latest
 
