Add buildspec.yml for CodeBuild pipeline

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,20 +6,20 @@ env:
     ACCOUNT_ID: 779500582907
     REPOSITORY_URI: 779500582907.dkr.ecr.eu-central-1.amazonaws.com/student-crud-api
     CLUSTER_NAME: student-crud-cluster
-    SERVICE_NAME: student-crud-task-service         
-    CONTAINER_NAME: student-crud-container    
+    SERVICE_NAME: student-crud-task-service
+    CONTAINER_NAME: student-crud-container
 
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI
-      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - export IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - echo "Using IMAGE_TAG=$IMAGE_TAG"
 
   build:
     commands:
       - echo Build started on `date`
-      - ./mvnw clean package -DskipTests
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:latest
 
