--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,17 +16,19 @@ phases:
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI
       - export IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - echo "Using IMAGE_TAG=$IMAGE_TAG"
+	  
+	  
+	  build:
+	    commands:
+	      - echo Build started on `date`
+	      - echo "CodeBuild source directory: $CODEBUILD_SRC_DIR"
+	      - ls -la
+	      - echo Running Maven Build...
+	      - ./mvnw clean package -DskipTests
+	      - echo Building Docker image...
+	      - docker build -f Dockerfile -t $REPOSITORY_URI:$IMAGE_TAG .
+	      - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:latest
 
-  build:
-    commands:
-      - echo Build started on `date`
-      - echo "CodeBuild source directory: $CODEBUILD_SRC_DIR"
-      - ls -la $CODEBUILD_SRC_DIR
-      - echo Running Maven Build...
-      - ./mvnw clean package -DskipTests
-      - echo Building Docker image...
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-      - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:latest
 
   post_build:
     commands:
